--- a/css/main.css
+++ b/css/main.css
@@ -37,6 +37,7 @@ ul {
 img {
   display: block;
   height: auto;
+  min-width: 100%;
 }
 
 .link {
@@ -368,44 +369,6 @@ body {
   margin-right: 10px;
 }
 
-.header-list {
-  display: none;
-}
-
-@media screen and (min-width: 768px) {
-  .header-list {
-    display: flex;
-  }
-}
-
-@media screen and (min-width: 768px) {
-  .header-navigation {
-    display: flex;
-    align-items: center;
-  }
-  .header-container {
-    display: flex;
-    align-items: center;
-  }
-}
-
-.header-contacts {
-  display: none;
-}
-
-@media screen and (min-width: 768px) {
-  .header-contacts {
-    display: flex;
-    margin-left: auto;
-  }
-}
-
-@media screen and (min-width: 768px) {
-  .header-link-logo {
-    margin-right: 90px;
-  }
-}
-
 .header {
   padding-top: 16px;
   padding-bottom: 16px;
@@ -419,16 +382,6 @@ body {
   }
 }
 
-.header-link-logo {
-  font-family: Raleway;
-  font-style: normal;
-  font-weight: 700;
-  font-size: 26px;
-  line-height: 1.19;
-  letter-spacing: 0.03em;
-  color: #000000;
-}
-
 .logo-header {
   font-family: Raleway;
   font-style: normal;
@@ -437,6 +390,77 @@ body {
   line-height: 1.16;
   letter-spacing: 0.03em;
   color: var(--accent-color);
+}
+
+.header-link-logo {
+  font-family: Raleway;
+  font-style: normal;
+  font-weight: 700;
+  font-size: 24px;
+  line-height: 1.16;
+  letter-spacing: 0.03em;
+  color: #000000;
+  margin-right: 88px;
+}
+
+@media screen and (min-width: 1200px) {
+  .header-link-logo {
+    margin-right: 90px;
+  }
+}
+
+.header-list {
+  display: none;
+}
+
+@media screen and (min-width: 768px) {
+  .header-list {
+    display: flex;
+  }
+}
+
+.header-item:not(:last-child) {
+  margin-right: 50px;
+}
+
+.header-contacts {
+  display: none;
+}
+
+@media screen and (min-width: 768px) {
+  .header-contacts {
+    display: block;
+    margin-left: auto;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .header-contacts {
+    display: flex;
+  }
+}
+
+.header-contacts-connect {
+  margin-bottom: 10px;
+}
+
+@media screen and (min-width: 1200px) {
+  .header-contacts-connect {
+    margin-bottom: 0;
+  }
+  .header-contacts-connect:not(:last-child) {
+    margin-right: 50px;
+  }
+}
+
+.header-container {
+  display: flex;
+  align-items: center;
+}
+
+.header-navigation {
+  display: flex;
+  align-items: center;
 }
 
 .header-link {
@@ -457,10 +481,6 @@ body {
   color: var(--accent-color);
 }
 
-.header-item:not(:last-child) {
-  margin-right: 50px;
-}
-
 .header-link.anderline::after {
   content: "";
   height: 4px;
@@ -473,22 +493,24 @@ body {
   bottom: -32px;
 }
 
-.header-contacts-mail {
+.header-contacts-mail,
+.header-contacts-tell {
   font-weight: 500;
-  font-size: 14px;
-  line-height: 1.14px;
+  font-size: 12px;
+  line-height: 1.16px;
   letter-spacing: 0.02em;
   color: var(--title-text-color);
   transition: color var(--transition-duration) var(--main-cubic);
 }
 
-.header-contacts-mail:hover, .header-contacts-mail:focus {
+.header-contacts-mail:hover, .header-contacts-mail:focus,
+.header-contacts-tell:hover,
+.header-contacts-tell:focus {
   color: var(--accent-color);
 }
 
-.header-contacts-mail-icon {
-  width: 16px;
-  height: 12px;
+.header-contacts-mail-icon,
+.header-contacts-tell-icon {
   fill: currentColor;
   margin-right: 10px;
 }
@@ -499,31 +521,17 @@ body {
   align-items: center;
 }
 
-.header-contacts-tell {
-  font-weight: 500;
-  font-size: 14px;
-  line-height: 1.14;
-  letter-spacing: 0.02em;
-  color: var(--title-text-color);
-  transition: color var(--transition-duration) var(--main-cubic);
-}
-
-.header-contacts-tell:hover, .header-contacts-tell:focus {
-  color: var(--accent-color);
-}
-
-.header-contacts-tell-icon {
-  width: 10px;
-  height: 16px;
-  fill: currentColor;
-  margin-right: 10px;
-}
-
+_______________________________________________Mobile
+menu________________________________________
 .menu-open-icon {
   transition: fill var(--transition-duration) var(--main-cubic);
 }
 
-.menu-open-icon:hover, .menu-open-icon:focus {
+_______________________________________________Mobile
+menu________________________________________
+.menu-open-icon:hover, _______________________________________________Mobile
+menu________________________________________
+.menu-open-icon:focus {
   fill: var(--accent-color);
 }
 
@@ -1034,13 +1042,17 @@ body {
   margin-bottom: 50px;
 }
 
-.footer-container {
-  display: flex;
-  align-items: baseline;
+@media screen and (min-width: 1200px) {
+  .footer-container {
+    display: flex;
+    align-items: baseline;
+  }
 }
 
-.footer-join {
-  margin-left: 70px;
+@media screen and (min-width: 1200px) {
+  .footer-join {
+    margin-left: 70px;
+  }
 }
 
 .fotter-join-title {
@@ -1050,6 +1062,12 @@ body {
   letter-spacing: 0.03em;
   text-transform: uppercase;
   color: #ffffff;
+}
+
+@media screen and (min-width: 320px) and (max-width: 767px) {
+  .fotter-join-title {
+    text-align: center;
+  }
 }
 
 .footer-join-list {
@@ -1094,17 +1112,26 @@ body {
   padding-top: 60px;
 }
 
-.footer-link {
-  display: block;
-  margin-bottom: 20px;
-}
-
-.footer-address {
-  margin-bottom: 9px;
+@media screen and (min-width: 320px) and (max-width: 767px) {
+  .footer-contacts {
+    text-align: center;
+  }
+  .footer-contacts:last-child {
+    margin-bottom: 60px;
+  }
 }
 
 .footer-contacts:not(:last-child) {
   margin-bottom: 9px;
+}
+
+@media screen and (min-width: 768px) {
+  .footer-nav-container {
+    display: flex;
+    align-items: baseline;
+    justify-content: space-around;
+    margin-bottom: 60px;
+  }
 }
 
 .footer-link {
@@ -1115,6 +1142,14 @@ body {
   line-height: 1.19;
   letter-spacing: 0.03em;
   color: #ffffff;
+  display: block;
+  margin-bottom: 20px;
+}
+
+@media screen and (min-width: 320px) and (max-width: 767px) {
+  .footer-link {
+    text-align: center;
+  }
 }
 
 .logo-footer {
@@ -1133,20 +1168,16 @@ body {
   letter-spacing: 0.03em;
   color: #ffffff;
   font-style: normal;
+  margin-bottom: 9px;
 }
 
-.footer-contacts-mail {
-  font-size: 14px;
-  line-height: 1.71;
-  letter-spacing: 0.03em;
-  color: rgba(255, 255, 255, 0.6);
-  transition: color var(--transition-duration) var(--main-cubic);
+@media screen and (min-width: 320px) and (max-width: 767px) {
+  .footer-address {
+    text-align: center;
+  }
 }
 
-.footer-contacts-mail:hover, .footer-contacts-mail:focus {
-  color: var(--accent-color);
-}
-
+.footer-contacts-mail,
 .footer-contacts-tell {
   font-size: 14px;
   line-height: 1.71;
@@ -1155,18 +1186,31 @@ body {
   transition: color var(--transition-duration) var(--main-cubic);
 }
 
-.footer-contacts-tell:hover, .footer-contacts-tell:focus {
+.footer-contacts-mail:hover, .footer-contacts-mail:focus,
+.footer-contacts-tell:hover,
+.footer-contacts-tell:focus {
   color: var(--accent-color);
 }
 
-.footer-form {
-  display: flex;
-  align-items: center;
-  justify-content: center;
+@media screen and (min-width: 1200px) {
+  .footer-form {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
 }
 
-.footer-input-wrape {
-  margin-left: 95px;
+@media screen and (min-width: 768px) {
+  .footer-input-wrape {
+    text-align: center;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .footer-input-wrape {
+    margin-left: 95px;
+    text-align: left;
+  }
 }
 
 .footer-input-title {
@@ -1179,8 +1223,15 @@ body {
   margin-bottom: 20px;
 }
 
+@media screen and (min-width: 320px) and (max-width: 768px) {
+  .footer-input-title {
+    text-align: center;
+    margin-top: 60px;
+  }
+}
+
 .footer-input {
-  width: 360px;
+  width: 100%;
   height: 50px;
   border: 1px solid rgba(255, 255, 255, 0.3);
   box-sizing: border-box;
@@ -1201,6 +1252,18 @@ body {
   color: rgba(255, 255, 255, 0.6);
 }
 
+@media screen and (min-width: 320px) {
+  .footer-input {
+    margin-bottom: 20px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .footer-input {
+    width: 450px;
+  }
+}
+
 .footer-form-btn {
   background-color: var(--accent-color);
   padding-top: 10px;
@@ -1218,10 +1281,35 @@ body {
   cursor: pointer;
 }
 
+@media screen and (min-width: 320px) {
+  .footer-form-btn {
+    margin: auto;
+  }
+}
+
 .portfolio-filter {
   display: flex;
-  margin-bottom: 54px;
-  justify-content: center;
+}
+
+@media screen and (min-width: 320px) {
+  .portfolio-filter {
+    justify-content: flex-start;
+    flex-wrap: wrap;
+    margin-bottom: 40px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .portfolio-filter {
+    margin-bottom: 30px;
+    justify-content: center;
+  }
+}
+
+@media screen and (min-width: 320px) and (max-width: 767.5px) {
+  .portfolio-filter-item:nth-child(n + 4) {
+    margin-top: 15px;
+  }
 }
 
 .portfolio-filter-item:not(:last-child) {
@@ -1250,6 +1338,12 @@ body {
   box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
 }
 
+@media screen and (min-width: 320px) {
+  .portfolio-list-item:not(:last-child) {
+    margin-bottom: 30px;
+  }
+}
+
 .portfolio-heading {
   background: #ffffff;
   border: 1px solid #eeeeee;
@@ -1263,21 +1357,32 @@ body {
   padding-right: 24px;
 }
 
-.portfolio-list {
-  display: flex;
-  flex-wrap: wrap;
-  margin-top: -30px;
-  margin-left: -30px;
+@media screen and (min-width: 768px) {
+  .portfolio-list {
+    display: flex;
+    flex-wrap: wrap;
+    margin-top: -30px;
+    margin-left: -30px;
+  }
 }
 
-.portfolio-list-item {
-  flex-basis: calc(100% / 3 - 30px);
-  margin-top: 30px;
-  margin-left: 30px;
+@media screen and (min-width: 768px) {
+  .portfolio-list-item {
+    flex-basis: calc(100% / 2 - 30px);
+    margin-top: 30px;
+    margin-left: 30px;
+  }
 }
 
-.portfolio-list-item:nth-child(n + 7) {
-  margin-bottom: 0;
+@media screen and (min-width: 1200px) {
+  .portfolio-list-item {
+    flex-basis: calc(100% / 3 - 30px);
+    margin-top: 30px;
+    margin-left: 30px;
+  }
+  .portfolio-list-item:nth-child(n + 7) {
+    margin-bottom: 0;
+  }
 }
 
 .portfolio-head {
@@ -1302,7 +1407,7 @@ body {
 }
 
 .portfolio-top-text {
-  width: 370px;
+  width: 100%;
   height: 100%;
   background-color: rgba(33, 150, 243, 0.9);
   font-weight: 400;
