--- a/sacc/layout/_footer.scss
+++ b/sacc/layout/_footer.scss
@@ -1,9 +1,13 @@
 .footer-container {
-  display: flex;
-  align-items: baseline;
+  @media screen and (min-width: 1200px) {
+    display: flex;
+    align-items: baseline;
+  }
 }
 .footer-join {
-  margin-left: 70px;
+  @media screen and (min-width: 1200px) {
+    margin-left: 70px;
+  }
 }
 .fotter-join-title {
   font-weight: 700;
@@ -12,6 +16,9 @@
   letter-spacing: 0.03em;
   text-transform: uppercase;
   color: #ffffff;
+  @media screen and (min-width: 320px) and (max-width: 767px) {
+    text-align: center;
+  }
 }
 .footer-join-list {
   display: flex;
@@ -50,16 +57,24 @@
   padding-bottom: 60px;
   padding-top: 60px;
 }
-.footer-link {
-  display: block;
-  margin-bottom: 20px;
-}
-
-.footer-address {
-  margin-bottom: 9px;
+.footer-contacts {
+  @media screen and (min-width: 320px) and (max-width: 767px) {
+    text-align: center;
+    &:last-child {
+      margin-bottom: 60px;
+    }
+  }
 }
 .footer-contacts:not(:last-child) {
   margin-bottom: 9px;
+}
+.footer-nav-container {
+  @media screen and (min-width: 768px) {
+    display: flex;
+    align-items: baseline;
+    justify-content: space-around;
+    margin-bottom: 60px;
+  }
 }
 .footer-link {
   font-family: Raleway;
@@ -69,6 +84,11 @@
   line-height: 1.19;
   letter-spacing: 0.03em;
   color: #ffffff;
+  display: block;
+  margin-bottom: 20px;
+  @media screen and (min-width: 320px) and (max-width: 767px) {
+    text-align: center;
+  }
 }
 .logo-footer {
   font-family: Raleway;
@@ -85,18 +105,12 @@
   letter-spacing: 0.03em;
   color: #ffffff;
   font-style: normal;
-}
-.footer-contacts-mail {
-  font-size: 14px;
-  line-height: 1.71;
-  letter-spacing: 0.03em;
-  color: rgba(255, 255, 255, 0.6);
-  transition: color var(--transition-duration) var(--main-cubic);
-  &:hover,
-  &:focus {
-    color: var(--accent-color);
+  margin-bottom: 9px;
+  @media screen and (min-width: 320px) and (max-width: 767px) {
+    text-align: center;
   }
 }
+.footer-contacts-mail,
 .footer-contacts-tell {
   font-size: 14px;
   line-height: 1.71;
@@ -110,12 +124,20 @@
 }
 
 .footer-form {
-  display: flex;
-  align-items: center;
-  justify-content: center;
+  @media screen and (min-width: 1200px) {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
 }
 .footer-input-wrape {
-  margin-left: 95px;
+  @media screen and (min-width: 768px) {
+    text-align: center;
+  }
+  @media screen and (min-width: 1200px) {
+    margin-left: 95px;
+    text-align: left;
+  }
 }
 .footer-input-title {
   font-weight: 700;
@@ -125,9 +147,13 @@
   text-transform: uppercase;
   color: #ffffff;
   margin-bottom: 20px;
+  @media screen and (min-width: 320px) and (max-width: 768px) {
+    text-align: center;
+    margin-top: 60px;
+  }
 }
 .footer-input {
-  width: 360px;
+  width: 100%;
   height: 50px;
   border: 1px solid rgba(255, 255, 255, 0.3);
   box-sizing: border-box;
@@ -145,6 +171,12 @@
     letter-spacing: 0.03em;
     color: rgba(255, 255, 255, 0.6);
   }
+  @media screen and (min-width: 320px) {
+    margin-bottom: 20px;
+  }
+  @media screen and (min-width: 768px) {
+    width: 450px;
+  }
 }
 .footer-form-btn {
   background-color: var(--accent-color);
@@ -161,4 +193,7 @@
   min-width: 200px;
   min-height: 50px;
   cursor: pointer;
+  @media screen and (min-width: 320px) {
+    margin: auto;
+  }
 }
