--- a/sacc/layout/_header.scss
+++ b/sacc/layout/_header.scss
@@ -1,34 +1,3 @@
-.header-list {
-  display: none;
-  @media screen and (min-width: 768px) {
-    display: flex;
-  }
-}
-// ----------Decstop----------
-@media screen and (min-width: 768px) {
-  .header-navigation {
-    display: flex;
-    align-items: center;
-  }
-  .header-container {
-    display: flex;
-    align-items: center;
-  }
-}
-
-.header-contacts {
-  display: none;
-  @media screen and (min-width: 768px) {
-    display: flex;
-    margin-left: auto;
-  }
-}
-@media screen and (min-width: 768px) {
-  .header-link-logo {
-    margin-right: 90px;
-  }
-}
-
 .header {
   //  -------mobile-------------
   padding-top: 16px;
@@ -40,28 +9,69 @@
     padding-bottom: 24px;
   }
 }
-
-.header-link-logo {
-  font-family: Raleway;
-  font-style: normal;
-  font-weight: 700;
-  font-size: 26px;
-  line-height: 1.19;
-  letter-spacing: 0.03em;
-  color: #000000;
-}
 .logo-header {
   font-family: Raleway;
   font-style: normal;
   font-weight: 700;
-  //  -------mobile-------------
   font-size: 24px;
   line-height: 1.16;
   letter-spacing: 0.03em;
   color: var(--accent-color);
-  // ----------Decstop----------
-  // font-size: 26px;
-  // line-height: 1.19;
+}
+.header-link-logo {
+  font-family: Raleway;
+  font-style: normal;
+  font-weight: 700;
+  font-size: 24px;
+  line-height: 1.16;
+  letter-spacing: 0.03em;
+  color: #000000;
+  margin-right: 88px;
+  @media screen and (min-width: 1200px) {
+    margin-right: 90px;
+  }
+}
+
+.header-list {
+  display: none;
+  @media screen and (min-width: 768px) {
+    display: flex;
+  }
+}
+.header-item {
+  &:not(:last-child) {
+    margin-right: 50px;
+  }
+}
+.header-contacts {
+  display: none;
+  @media screen and (min-width: 768px) {
+    display: block;
+    margin-left: auto;
+  }
+  @media screen and (min-width: 1200px) {
+    display: flex;
+  }
+}
+
+.header-contacts-connect {
+  margin-bottom: 10px;
+  @media screen and (min-width: 1200px) {
+    margin-bottom: 0;
+    &:not(:last-child) {
+      margin-right: 50px;
+    }
+  }
+}
+
+.header-container {
+  display: flex;
+  align-items: center;
+}
+
+.header-navigation {
+  display: flex;
+  align-items: center;
 }
 .header-link {
   font-weight: 500;
@@ -80,9 +90,6 @@
     color: var(--accent-color);
   }
 }
-.header-item:not(:last-child) {
-  margin-right: 50px;
-}
 .header-link.anderline::after {
   content: "";
   height: 4px;
@@ -94,10 +101,11 @@
   left: 0px;
   bottom: -32px;
 }
-.header-contacts-mail {
+.header-contacts-mail,
+.header-contacts-tell {
   font-weight: 500;
-  font-size: 14px;
-  line-height: 1.14px;
+  font-size: 12px;
+  line-height: 1.16px;
   letter-spacing: 0.02em;
   color: var(--title-text-color);
   transition: color var(--transition-duration) var(--main-cubic);
@@ -106,13 +114,8 @@
     color: var(--accent-color);
   }
 }
-// .header-contacts-connect:not(:last-child) {
-//   margin-right: 50px;
-// }
-
-.header-contacts-mail-icon {
-  width: 16px;
-  height: 12px;
+.header-contacts-mail-icon,
+.header-contacts-tell-icon {
   fill: currentColor;
   margin-right: 10px;
 }
@@ -122,27 +125,9 @@
   display: flex;
   align-items: center;
 }
-
-.header-contacts-tell {
-  font-weight: 500;
-  font-size: 14px;
-  line-height: 1.14;
-  letter-spacing: 0.02em;
-  color: var(--title-text-color);
-  transition: color var(--transition-duration) var(--main-cubic);
-  &:hover,
-  &:focus {
-    color: var(--accent-color);
-  }
-}
-.header-contacts-tell-icon {
-  width: 10px;
-  height: 16px;
-  fill: currentColor;
-  margin-right: 10px;
-}
-// _______________________________________________Monile menu________________________________________
-.menu-open-icon {
+_______________________________________________Mobile
+  menu________________________________________
+  .menu-open-icon {
   &:hover,
   &:focus {
     fill: var(--accent-color);
