--- a/sacc/layout/_portfolio.scss
+++ b/sacc/layout/_portfolio.scss
@@ -1,7 +1,21 @@
 .portfolio-filter {
   display: flex;
-  margin-bottom: 54px;
-  justify-content: center;
+  @media screen and (min-width: 320px) {
+    justify-content: flex-start;
+    flex-wrap: wrap;
+    margin-bottom: 40px;
+  }
+  @media screen and (min-width: 768px) {
+    margin-bottom: 30px;
+    justify-content: center;
+  }
+}
+.portfolio-filter-item {
+  @media screen and (min-width: 320px) and (max-width: 767.5px) {
+    &:nth-child(n + 4) {
+      margin-top: 15px;
+    }
+  }
 }
 .portfolio-filter-item:not(:last-child) {
   margin-right: 8px;
@@ -29,7 +43,13 @@
       0px 2px 2px rgba(0, 0, 0, 0.12);
   }
 }
-
+.portfolio-list-item {
+  @media screen and (min-width: 320px) {
+    &:not(:last-child) {
+      margin-bottom: 30px;
+    }
+  }
+}
 .portfolio-heading {
   background: #ffffff;
   border: 1px solid #eeeeee;
@@ -44,19 +64,28 @@
 }
 
 .portfolio-list {
-  display: flex;
-  flex-wrap: wrap;
-  margin-top: -30px;
-  margin-left: -30px;
+  @media screen and (min-width: 768px) {
+    display: flex;
+    flex-wrap: wrap;
+    margin-top: -30px;
+    margin-left: -30px;
+  }
 }
 
 .portfolio-list-item {
-  flex-basis: calc(100% / 3 - 30px);
-  margin-top: 30px;
-  margin-left: 30px;
-}
-.portfolio-list-item:nth-child(n + 7) {
-  margin-bottom: 0;
+  @media screen and (min-width: 768px) {
+    flex-basis: calc(100% / 2 - 30px);
+    margin-top: 30px;
+    margin-left: 30px;
+  }
+  @media screen and (min-width: 1200px) {
+    flex-basis: calc(100% / 3 - 30px);
+    margin-top: 30px;
+    margin-left: 30px;
+    &:nth-child(n + 7) {
+      margin-bottom: 0;
+    }
+  }
 }
 .portfolio-head {
   font-weight: 700;
@@ -78,7 +107,7 @@
   overflow: hidden;
 }
 .portfolio-top-text {
-  width: 370px;
+  width: 100%;
   height: 100%;
   background-color: rgba(33, 150, 243, 0.9);
   font-weight: 400;
